[gd_scene load_steps=8 format=3 uid="uid://chkjuv4hhn0mi"]

[ext_resource type="Script" uid="uid://pvx34boikgac" path="res://scripts/world/world.gd" id="1_kqs1s"]
[ext_resource type="Script" uid="uid://btfkmty07l402" path="res://scripts/world/selection_hud.gd" id="2_32lhk"]
[ext_resource type="Script" uid="uid://dyaacp04ukmif" path="res://scenes/ESC menu/esc_menu.gd" id="3_d1c63"]
[ext_resource type="Script" uid="uid://ql7mnypnwy1x" path="res://scenes/ESC menu/save_panel.gd" id="4_hlk0d"]
[ext_resource type="Script" uid="uid://cvxw5mk26n8od" path="res://scenes/ESC menu/settings_panel.gd" id="5_0uv0p"]
[ext_resource type="Script" uid="uid://dx326gmopsmmy" path="res://scripts/loadpanel.gd" id="6_0uv0p"]
[ext_resource type="PackedScene" uid="uid://drr474uy35gyy" path="res://scenes/Right Dock/right_dock.tscn" id="8_b3faq"]

[node name="World" type="Node2D" groups=["World"]]
script = ExtResource("1_kqs1s")

[node name="Fragments" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(16, 16)
offset_left = 1.0
offset_top = 5.0
offset_right = 158.0
offset_bottom = 41.0

[node name="DimPause" type="ColorRect" parent="CanvasLayer/Panel"]
visible = false
z_index = 9
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.21568628)

[node name="EscMenu" type="PanelContainer" parent="CanvasLayer/Panel"]
visible = false
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_d1c63")

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Panel/EscMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/EscMenu/VBox"]
layout_mode = 2
theme_override_constants/line_spacing = 8
theme_override_font_sizes/font_size = 32
text = "Options Menu"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="CanvasLayer/Panel/EscMenu/VBox"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CanvasLayer/Panel/EscMenu/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="CanvasLayer/Panel/EscMenu/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="CanvasLayer/Panel/EscMenu/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Load"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Panel/EscMenu/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Settings"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/Panel/EscMenu/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="CanvasLayer/Panel/EscMenu/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Quit Game"

[node name="SavePanel" type="PanelContainer" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_hlk0d")

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Panel/SavePanel"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Panel/SavePanel/VBox"]
layout_mode = 2
text = "Save Game"

[node name="NameRow" type="HBoxContainer" parent="CanvasLayer/Panel/SavePanel/VBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CanvasLayer/Panel/SavePanel/VBox/NameRow"]
layout_mode = 2
text = "Name :"

[node name="NameEdit" type="LineEdit" parent="CanvasLayer/Panel/SavePanel/VBox/NameRow"]
layout_mode = 2

[node name="SlotsGrid" type="GridContainer" parent="CanvasLayer/Panel/SavePanel/VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/Panel/SavePanel/VBox"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="CanvasLayer/Panel/SavePanel/VBox/Buttons"]
layout_mode = 2
text = "Save"

[node name="Spacer" type="Control" parent="CanvasLayer/Panel/SavePanel/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="CanvasLayer/Panel/SavePanel/VBox/Buttons"]
layout_mode = 2
text = "Cancel"

[node name="ConfirmDialog" type="ConfirmationDialog" parent="CanvasLayer/Panel/SavePanel/VBox"]

[node name="SettingsPanel" type="PanelContainer" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.5
offset_top = -114.5
offset_right = 134.5
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_0uv0p")

[node name="Margin" type="MarginContainer" parent="CanvasLayer/Panel/SettingsPanel"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Panel/SettingsPanel/Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox"]
layout_mode = 2
text = "Settings"

[node name="ModeRow" type="HBoxContainer" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox"]
layout_mode = 2

[node name="ModeLabel" type="Label" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/ModeRow"]
layout_mode = 2
text = "Display Mode"

[node name="ModeOption" type="OptionButton" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/ModeRow"]
layout_mode = 2

[node name="MonRow" type="HBoxContainer" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox"]
layout_mode = 2

[node name="MonLabel" type="Label" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/MonRow"]
layout_mode = 2
text = "Display Mode"

[node name="MonOption" type="OptionButton" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/MonRow"]
layout_mode = 2

[node name="ResRow" type="HBoxContainer" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox"]
layout_mode = 2

[node name="ResLabel" type="Label" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/ResRow"]
layout_mode = 2
text = "Resolution"

[node name="ResOption" type="OptionButton" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/ResRow"]
layout_mode = 2

[node name="VSyncRow" type="HBoxContainer" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/VSyncRow"]
layout_mode = 2
text = "VSync"

[node name="VSyncCheck" type="CheckBox" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/VSyncRow"]
layout_mode = 2

[node name="FpsRow" type="HBoxContainer" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox"]
layout_mode = 2

[node name="FpsLabel" type="Label" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/FpsRow"]
layout_mode = 2
text = "FPS Cap (0 = uncapped)"

[node name="FpsSpin" type="SpinBox" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/FpsRow"]
layout_mode = 2

[node name="VolRow" type="HBoxContainer" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox"]
layout_mode = 2

[node name="VolLabel" type="Label" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/VolRow"]
layout_mode = 2
text = "Master Volume"

[node name="VolSlider" type="HSlider" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/VolRow"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox"]
layout_mode = 2

[node name="CloseBtn" type="Button" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/Buttons"]
layout_direction = 3
layout_mode = 2
text = "Close"

[node name="ApplyBtn" type="Button" parent="CanvasLayer/Panel/SettingsPanel/Margin/VBox/Buttons"]
layout_direction = 3
layout_mode = 2
text = "Apply"

[node name="LoadPanel" type="PanelContainer" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_0uv0p")

[node name="Margin" type="MarginContainer" parent="CanvasLayer/Panel/LoadPanel"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Panel/LoadPanel/Margin"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="CanvasLayer/Panel/LoadPanel/Margin/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Panel/LoadPanel/Margin/VBox/Header"]
layout_mode = 2
text = "Load game"

[node name="SlotsGrid" type="GridContainer" parent="CanvasLayer/Panel/LoadPanel/Margin/VBox/Header"]
layout_mode = 2
columns = 2

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/Panel/LoadPanel/Margin/VBox/Header"]
layout_mode = 2

[node name="DeleteBtn" type="Button" parent="CanvasLayer/Panel/LoadPanel/Margin/VBox/Header/Buttons"]
layout_mode = 2
text = "Delete"

[node name="Spacer" type="Control" parent="CanvasLayer/Panel/LoadPanel/Margin/VBox/Header/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseBtn" type="Button" parent="CanvasLayer/Panel/LoadPanel/Margin/VBox/Header/Buttons"]
layout_mode = 2
text = "Close"

[node name="SelectionHUD" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(640, 520)
offset_top = 59.0
offset_right = 427.0
offset_bottom = 379.0
script = ExtResource("2_32lhk")
debug_logging = true

[node name="Margin" type="MarginContainer" parent="CanvasLayer/SelectionHUD"]
custom_minimum_size = Vector2(620, 0)
layout_mode = 0
offset_left = 10.0
offset_right = 630.0
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="RootVBox" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="ModeHeader" type="HBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="TileTabButton" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/ModeHeader"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Tile"

[node name="BuildingTabButton" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/ModeHeader"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Building"

[node name="Scroll" type="ScrollContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContent" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ModeTabs" type="TabContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
tabs_visible = false

[node name="TileTab" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
metadata/_tab_index = 0

[node name="TileHeaderRow" type="HBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TileIcon" type="TextureRect" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileHeaderRow"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="TileHeaderText" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileHeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="TileName" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileHeaderRow/TileHeaderText"]
layout_mode = 2
text = "Tile Name"

[node name="TileCoord" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileHeaderRow/TileHeaderText"]
layout_mode = 2
text = "(0,0)"

[node name="TileTierChip" type="PanelContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileHeaderRow"]
custom_minimum_size = Vector2(-17.63, 0)
layout_mode = 2

[node name="TileTierLabel" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileHeaderRow/TileTierChip"]
layout_mode = 2
text = "T1"

[node name="TileIcon2" type="TextureRect" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileHeaderRow"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="TileModifiersSection" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TileModifiersHeader" type="HBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileModifiersSection"]
layout_mode = 2

[node name="TileModifiersTitle" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileModifiersSection/TileModifiersHeader"]
layout_mode = 2
text = "Modifiers"

[node name="TileModifiersExpand" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileModifiersSection/TileModifiersHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "+0"

[node name="TileModifiersGrid" type="GridContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileModifiersSection"]
layout_mode = 2
columns = 5

[node name="TileResourcesSection" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TileResourcesTitle" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileResourcesSection"]
layout_mode = 2
text = "Resource Nodes"

[node name="TileResourcesList" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileResourcesSection"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TileEffectsSection" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TileEffectsTitle" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileEffectsSection"]
layout_mode = 2
text = "Effects"

[node name="TileEffectsList" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/TileTab/TileEffectsSection"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BuildingTab" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
metadata/_tab_index = 1

[node name="EquippedSection" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EquippedTitle" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection"]
layout_mode = 2
text = "Equipped"

[node name="BuildingRow" type="HBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BuildingSlot" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection/BuildingRow"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2

[node name="BuildingSummary" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection/BuildingRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="BuildingName" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection/BuildingRow/BuildingSummary"]
layout_mode = 2
text = "Building"

[node name="BuildingStatus" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection/BuildingRow/BuildingSummary"]
layout_mode = 2
text = "Status"

[node name="BuildingTierChip" type="PanelContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection/BuildingRow/BuildingSummary"]
layout_mode = 2

[node name="BuildingTierLabel" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection/BuildingRow/BuildingSummary/BuildingTierChip"]
layout_mode = 2
text = "T1"

[node name="ModulesRow" type="HBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ModuleSlot1" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection/ModulesRow"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2

[node name="ModuleSlot2" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection/ModulesRow"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2

[node name="ModuleSlot3" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/EquippedSection/ModulesRow"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2

[node name="BuildingChipsRow" type="HBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ChipWorkers" type="PanelContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingChipsRow"]
layout_mode = 2

[node name="ChipWorkersLabel" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingChipsRow/ChipWorkers"]
layout_mode = 2
text = "Workers: 0"

[node name="ChipQueue" type="PanelContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingChipsRow"]
layout_mode = 2

[node name="ChipQueueLabel" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingChipsRow/ChipQueue"]
layout_mode = 2
text = "Queue: 0"

[node name="ChipUpkeep" type="PanelContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingChipsRow"]
layout_mode = 2

[node name="ChipUpkeepLabel" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingChipsRow/ChipUpkeep"]
layout_mode = 2
text = "Upkeep: -"

[node name="ChipIntegrity" type="PanelContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingChipsRow"]
layout_mode = 2

[node name="ChipIntegrityLabel" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingChipsRow/ChipIntegrity"]
layout_mode = 2
text = "Integrity: 100%"

[node name="ChipIntegrityLabel2" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingChipsRow/ChipIntegrity"]
layout_mode = 2
text = "Integrity: 100%"

[node name="ChipIntegrity2" type="PanelContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingChipsRow"]
layout_mode = 2

[node name="BuildingIORow" type="HBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BuildingInputs" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="BuildingInputsTitle" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow/BuildingInputs"]
layout_mode = 2
text = "Inputs"

[node name="BuildingInputsList" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow/BuildingInputs"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BuildingInputsTitle2" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow/BuildingInputs"]
layout_mode = 2
text = "Inputs"

[node name="BuildingInputsList2" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow/BuildingInputs"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BuildingOutputs" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="BuildingOutputsTitle" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow/BuildingOutputs"]
layout_mode = 2
text = "Outputs"

[node name="BuildingOutputsList" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow/BuildingOutputs"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BuildingOutputsTitle2" type="Label" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow/BuildingOutputs"]
layout_mode = 2
text = "Outputs"

[node name="BuildingOutputsList2" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow/BuildingOutputs"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BuildingInputs2" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="BuildingOutputs2" type="VBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingIORow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="BuildingButtonsRow" type="HBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AssignButton" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingButtonsRow"]
layout_mode = 2
text = "Assign"

[node name="UpgradeButton" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingButtonsRow"]
layout_mode = 2
text = "Upgrade"

[node name="EquipModuleButton" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingButtonsRow"]
layout_mode = 2
text = "Equip Module"

[node name="OpenQueueButton" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingButtonsRow"]
layout_mode = 2
text = "Open Queue"

[node name="AssignButton2" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingButtonsRow"]
layout_mode = 2
text = "Assign"

[node name="UpgradeButton2" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingButtonsRow"]
layout_mode = 2
text = "Upgrade"

[node name="EquipModuleButton2" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingButtonsRow"]
layout_mode = 2
text = "Equip Module"

[node name="OpenQueueButton2" type="Button" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab/BuildingButtonsRow"]
layout_mode = 2
text = "Open Queue"

[node name="BuildingIORow2" type="HBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BuildingButtonsRow2" type="HBoxContainer" parent="CanvasLayer/SelectionHUD/Margin/RootVBox/Scroll/ScrollContent/ModeTabs/BuildingTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RightDock" parent="CanvasLayer" instance=ExtResource("8_b3faq")]

[node name="RightDock2" parent="CanvasLayer" instance=ExtResource("8_b3faq")]

[node name="Cam" type="Camera2D" parent="."]

[node name="Cam2" type="Camera2D" parent="."]
